--- a/angular-crypto/package.json
+++ b/angular-crypto/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "demo-app",
+  "name": "angular-crypto",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "npm run pages:build && wrangler pages dev dist/cloudflare --compatibility-date=2024-03-04 --experimental-local",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:demo-app": "node dist/demo-app/server/server.mjs"
+    "serve:ssr:angular-crypto": "node dist/angular-crypto/server/server.mjs",
+    "process": "node ./tools/copy-files.mjs && node ./tools/alter-polyfills.mjs",
+    "pages:build": "ng build && npm run process",
+    "deploy": "npm run pages:build && wrangler pages deploy dist/cloudflare"
   },
   "private": true,
   "dependencies": {
@@ -20,17 +23,17 @@
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/platform-server": "^17.2.0",
     "@angular/router": "^17.2.0",
-    "@angular/ssr": "^17.2.0",
     "d3": "^7.8.5",
-    "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.2.0",
-    "@angular/cli": "^17.2.0",
+    "@angular-devkit/build-angular": "^17.2.1",
+    "@angular/cli": "^17.2.1",
     "@angular/compiler-cli": "^17.2.0",
+    "@cloudflare/workers-types": "^4.20240222.0",
+    "@miniflare/tre": "^3.0.0-next.13",
     "@types/d3": "^7.4.3",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
@@ -41,6 +44,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.3.2"
+    "typescript": "~5.3.2",
+    "wrangler": "^0.0.0-23074c7d"
   }
 }
